Keep trying to fix scroll issue on iPhone and iPad

--- a/resources/assets/sass/pages/_welcome.scss
+++ b/resources/assets/sass/pages/_welcome.scss
@@ -27,13 +27,14 @@
         }
     }
     .scrollbar-container {
-        //padding-top: $navHeight;
+        padding-top: $navHeight + 20px;
         max-width: 540px;
-        padding-top: 38px;
         display: flex;
         align-items: center;
         @media (max-width: 1000px) {
             margin: 0;
+            padding-left: 20px;
+            padding-right: 20px;
             align-items: flex-start;
         }
         .text {
@@ -50,7 +51,7 @@
             p {
                 margin-bottom: 31px;
                 @media (max-width: 1100px) {
-                    font-size: 18px;
+                    font-size: 14px;
                     margin-bottom: 15px;
                 }
             }
@@ -77,11 +78,6 @@
 
     @media (max-width: 768px) {
         .scrollbar-container {
-            .text {
-                p {
-                    font-size: 26px;
-                }
-            }
             .img-container {
                 display: none;
             }
